hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello
  name: hello
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
#        filter: opafilter #uncomment this line to enable opafilter
    spec:
      containers:
      - image: docker.io/istio/examples-helloworld-v1
        imagePullPolicy: IfNotPresent
        name: hello
        ports:
        - containerPort: 80
          name: http
        resources:
          requests: 
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
    tier: backend
  name: hello
spec:
  ports:
    - port: 80
      name: http
      targetPort: 80
  selector:
    app: hello
