opa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opa-authz
  labels:
    app: opa-authz
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opa-authz
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
#        sidecar.opa-istio.io/inject: "true"
      labels:
        app: opa-authz
    spec:
      volumes:
        - configMap:
            defaultMode: 420
            name: opa-policy
          name: opa-policy
        - configMap:
            defaultMode: 420
            name: opa-envoy-config
          name: opa-envoy-config
      containers:
        - name: opa-authz
          image: openpolicyagent/opa:latest-envoy
          volumeMounts:
            - readOnly: true
              mountPath: /policy
              name: opa-policy
            - readOnly: true
              mountPath: /config
              name: opa-envoy-config
          args:
            - "run"
            - "--server"
            - "--config-file=/config/config.yaml"
            - "--addr=0.0.0.0:8181"
            - "--diagnostic-addr=0.0.0.0:8282"
            - "--ignore=.*"
            - "/policy/policy.rego"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: opa-authz
    tier: backend
  name: opa-authz
  namespace: default
spec:
  ports:
  - port: 9191
    protocol: TCP
    targetPort: 9191
  selector:
    app: opa-authz
  type: ClusterIP
