hello-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello
spec:
  hosts:
  - "*"
  gateways:
  - default-gw
  http:
  - match:
    - uri:
        prefix: /hello
    route:
    - destination:
        host: hello
        port:
          number: 80
