authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: base-authz
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
        paths: ["/hello"]
    when:
    - key: request.auth.claims[profileID]
      values: ["50bb752c-0275-11e9-870e-2e981c966add"]
